# Assistant_Bot

./: .gitignore  API_README.md  INSTALLATION.md  README.md  README_SETUP.md  SERVER_STATUS.md  SETUP_COMPLETE.md  STREAMING_DEBUG.md  clear_qdrant.py  deploy_azure.sh  docker-compose.yml  env.example  ingest_all.py  ingest_mfa.py  main.py  push_to_github.ps1  pyproject.toml  reingest_all.py  setup.ps1  setup.sh  start_server.ps1  start_server.sh  test_qa_mfa.py
Notebooks/: 12.19.0  Document_Parsing-1.ipynb  Document_Parsing-3.ipynb  Document_Parsing.ipynb  Document_parsing-2.ipynb
Notebooks/.ipynb_checkpoints/: Document_Parsing-1-checkpoint.ipynb  Document_Parsing-3-checkpoint.ipynb  Document_Parsing-checkpoint.ipynb  Document_parsing-2-checkpoint.ipynb
app/: app.py  dependencies.py  main.py
markdown_exports/1440_FOODS__-SUITE_1001_DESIGN_PRESENTATION_11_14_25__1_/: answer.md  markdown.md  metadata.json
markdown_exports/Barracuda_Backup_Policy_v1_0/: answer.md  markdown.md  metadata.json
markdown_exports/External_SharePoint_access/: answer.md  markdown.md  metadata.json
routers/: health.py  ingestion.py  qa.py
schemas/: common.py  ingestion.py  qa.py
services/: ingestion_service.py  qa_service.py  streaming_service.py
src/bridge/: raw_blob_reader.py  sharepoint_connector.py
src/cli/: __init__.py  agent_cli.py  chat_with_sas.py  dspy_cli.py  mfa_markdown_rag.py
src/config/: settings.py
src/optimization/: dspy_rag.py
src/orchestration/: agent.py
src/retrieval/: __init__.py  multimodal_service.py
src/text_indexing/: doc_parser.py  image_filter.py  layout_ingestor.py  markdown_builder.py  qdrant_writer.py  step_builder.py  storage.py  utils.py
src/visual_indexing/: pipeline.py
src/wrappers/: __init__.py  agent_service.py  ingest_service.py  qa_service.py
tests/: API_ENDPOINTS_GUIDE.md  AZURE_HOSTING_COMPARISON.md  CPU_REQUIREMENTS.md  MEMORY_REQUIREMENTS.md  MEMORY_REQUIREMENTS_REVISED.md  QDRANT_SETUP.md  SETUP_STATUS.md  TEST_RESULTS.md  agent.py  api_service.py  check_count.py  clear_qdrant.py  start_qdrant.ps1  start_streamlit.ps1  test_bridge_sharepoint_connector.py  test_cache_prompt.py  test_docx_detection.py  test_ingest_all.py  test_ingestion.py  test_qdrant.ps1  test_retrieval_multimodal.py  test_settings.py  test_setup.py  test_storage.py  test_text_indexing_utils.py
ui/: chat.py  preview_markdown.py
